--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
+spring.data.mongodb.uri=mongodb+srv://mspadmin:ohlrJDNWoYZL1234MWcIrspXwTskQ1Jzi5iFumVvweKcX2t@msp.fzdc7hn.mongodb.net/test.MSP?retryWrites=true&w=majority&appName=MSP
 
