--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.data.mongodb.uri=${MONGODB_URI}
+
+keycloak.realm=msp
+keycloak.auth-server-url=http://localhost:8081
+keycloak.resource=msp
+keycloak.ssl-required=external
+keycloak.public-client=true
+keycloak.bearer-only=true
