MSP-23 Changed application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.data.mongodb.uri=${MONGODB_URI}
 
-keycloak.realm=msp
-keycloak.auth-server-url=http://localhost:8081
-keycloak.resource=msp
-keycloak.ssl-required=external
-keycloak.public-client=true
-keycloak.bearer-only=true
+spring.security.oauth2.client.registration.keycloak.client-id=msp
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.scope=openid
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8081/realms/msp
+spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081/realms/msp
