--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -23,7 +23,6 @@ services:
 
   keycloak:
     image: quay.io/keycloak/keycloak:24.0.2
-#    command: ["start-dev", "--spi-event-listener-regis-enabled=true", "--spi-event-listener-provider=regis", "--import-realm"]
     restart: unless-stopped
     environment:
       KC_DB: postgres
@@ -35,11 +34,12 @@ services:
       KC_REALM_NAME: msp
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
+      KC_EVENT_LISTENERS: regis
     ports:
       - 8081:8080
     volumes:
       - ./keycloak/realm.json:/opt/keycloak/data/import/realm.json:ro
-      - ./keycloak/MSP-Backend-0.0.1-SNAPSHOT.jar:/opt/keycloak/providers/customeventlistener.jar
+      - ./keycloak/MSP-Backend-0.0.1-SNAPSHOT.jar:/opt/keycloak/providers/MSP-Backend-0.0.1-SNAPSHOT.jar
       - ./keycloak/keycloakScript.sh:/opt/keycloak/scripts/keycloakScript.sh
     logging: *logging
     entrypoint: "/opt/keycloak/scripts/keycloakScript.sh"
