--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.security.oauth2.client.registration.keycloak.scope=openid
 spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8081/realms/msp
 spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081/realms/msp
+spring.security.oauth2.client.registration.keycloak.redirect-uri=http://localhost:8081/login/oauth2/code/keycloak
+
